Add hide option for Paragraph(#Moonshine-IDE/Moonshine-IDE#1001)

--- a/src/view/domino/propertyEditors/PargraphPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/PargraphPropertyEditor.mxml
@@ -16,5 +16,6 @@
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     <domino:ParagraphLayoutForm />
+    <domino:HideOptions textProperty="hide"/>
     <forms:TextInformationForm label="Additional information" textProperty="cdataInformation"/>
 </suportclasses:BasePropertyEditor>
