Add hide option for all other domino compent(#Moonshine-IDE/Moonshine-IDE#1001)

--- a/src/view/domino/propertyEditors/DominoButtonPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoButtonPropertyEditor.mxml
@@ -203,7 +203,8 @@
 		
 	<domino:MultipleCheckbox label="Style:" 
 		optionExculdeFunction="excludeMultipleSelect"
-		collectionProperty="fontStyles" textProperty="fontStyle"/>	
+		collectionProperty="fontStyles" textProperty="fontStyle"/>
+	<domino:HideOptions textProperty="hide"/>	
 	<forms:DropdownListForm id="codeEnvent"
                             label="Code envent" textProperty="codeEvent"
                             collectionProperty="codeEnventList" labelField="label" valueField="value"
