--- a/src/view/domino/propertyEditors/DominoTablePropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoTablePropertyEditor.mxml
@@ -8,6 +8,7 @@
     </suportclasses:layout>
 
 	<domino:BasicsForm/>
+	<domino:HideOptions textProperty="hide"/>
 
 	<domino:GridForm id="gridForm"/>
 
